@@ -76,7 +76,7 @@ setup() {
   set_process_priority(-1);
 
   verbose      = 0;
-  version_info = get_version_info("mkvextract", true);
+  version_info = get_version_info("mkvextract", vif_full);
 }
 
 int
