@@ -715,7 +715,7 @@ void
 mmg_dialog::on_about(wxCommandEvent &evt) {
   wxAboutDialogInfo info;
   info.SetName(wxU("mkvmerge GUI"));
-  info.SetVersion(wxU(get_version_info("", false)));
+  info.SetVersion(wxU(get_version_info("")));
   info.SetCopyright(wxU("(C) Moritz Bunkus <moritz@bunkus.org>"));
   info.SetLicense(wxU(Z("MKVToolNix is licensed under the GNU GPL v2")) + wxU("\nhttp://www.gnu.org/licenses/old-licenses/gpl-2.0.html"));
   info.SetWebSite(wxU("http://www.bunkus.org/videotools/mkvtoolnix/"));
@@ -1859,7 +1859,7 @@ mmg_dialog::query_mkvmerge_capabilities() {
     wxMessageBox(wxString::Format(Z("The GUI is configured to use the mkvmerge executable from a different version (%s) than the GUI itself (%s). "
                                     "This is not supported but will not be prevented either. "
                                     "You should change the mkvmerge executable in the preferences dialog."),
-                                  capabilities[wxT("VERSION")].c_str(), wxUCS(get_version_info("mkvmerge GUI", true))),
+                                  capabilities[wxT("VERSION")].c_str(), wxUCS(get_version_info("mkvmerge GUI", vif_full))),
                  Z("Incompatible mkvmerge version"),
                  wxCENTER | wxOK | wxICON_ERROR);
 }
