@@ -1,3 +1,8 @@
+2011-09-21  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: The "writing application" element will not be
+	localized but always be written in English.
+
 2011-09-20  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: new feature: MPEG TS: mkvmerge will extract the track
